fixed toggle menu on small screens, updates padding on work section on small screens, narrowed social stocker

--- a/css/about.css
+++ b/css/about.css
@@ -80,3 +80,11 @@
         display: none;
     }
 }
+
+@media (max-width: 276px) {
+    .download-cv,
+    .download-cv i {
+        margin: 0;
+        background: none;
+    }
+}
