--- a/css/togglemenu.css
+++ b/css/togglemenu.css
@@ -1,5 +1,5 @@
 #toggle {
-    display: none;
+    /* display: none; */
 }
 
 .main-menu {
@@ -50,7 +50,6 @@
         opacity: 0;
         position: fixed;
         top: -1em;
-        right: -15em;
     }
     #toggle:checked~ul i {
         display: block;
@@ -64,6 +63,8 @@
         margin: 0;
         bottom: 15%;
         left: 0;
+        width: 2em;
+        padding: 0;
     }
     .social i:hover {
         font-weight: 800;
