--- a/css/works.css
+++ b/css/works.css
@@ -1,6 +1,5 @@
 .works {
     height: auto;
-    /* margin-bottom: 8em; */
     margin-top: 1em;
 }
 
@@ -20,7 +19,6 @@
     margin: 5%;
     border-radius: 2em;
     padding: 2em;
-    /* width: 50%; */
     display: flex;
     justify-content: space-evenly;
 }
@@ -42,6 +40,7 @@
 
 .work-item img {
     width: 100%;
+    height: auto;
     border-radius: 1em;
 }
 
@@ -59,6 +58,9 @@
 }
 
 @media (max-width: 500px) {
+    .works-wrapper {
+        margin: 0 1em;
+    }
     .work-item {
         flex-direction: column;
         justify-content: center;
@@ -71,5 +73,10 @@
         text-align: center;
         width: 100%;
         padding: 0;
+    }
+    .work-item p {
+        width: 100%;
+        margin: 0 auto;
+        line-height: 2em;
     }
 }
